--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,8 +3,48 @@ header {
   font-size: 14px;
   font-weight: bold;
   display: flex;
+  border-bottom: 1px solid black;
+  align-items: center;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 80px;
+
 }
 
 nav {
   display: inline-block;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  padding-left: 30px;
+}
+
+.logo img {
+  margin-right: 12px;
+}
+
+.logo span {
+  color: MediumAquamarine;
+}
+
+header nav {
+  padding-right: 40px;
+}
+
+
+a {
+  color: black;
+}
+
+nav span {
+  display: inline-block;
+  padding: 20px 10px;
+}
+
+body {
+  margin: 0;
 }
