--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,12 +4,17 @@ header {
   font-weight: bold;
   display: flex;
   border-bottom: 1px solid black;
+  background-color: white;
   align-items: center;
   position: fixed;
   z-index: 1;
   width: 100%;
   height: 80px;
+}
 
+div {
+  border: 1px solid black;
+  display: block;
 }
 
 nav {
@@ -35,7 +40,6 @@ header nav {
   padding-right: 40px;
 }
 
-
 a {
   color: black;
 }
@@ -47,4 +51,33 @@ nav span {
 
 body {
   margin: 0;
+}
+
+.content {
+  display: flex;
+  width: 1232px;
+  margin: 0 auto 78px auto;
+  padding-top: 116px;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  margin-right: 32px;
+}
+
+.column.large {
+  width: 630px;
+}
+
+.column.medium{
+  width: 300px;
+}
+
+.column.small{
+  width: 240px;
+}
+
+p {
+  display: block;
 }
