--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -81,3 +81,9 @@ body {
 p {
   display: block;
 }
+
+.lead-story .image-content {
+  background-image:
+  url('../pictures/Main-Story.png');
+  height: 300px;
+}
