--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,7 +13,6 @@ header {
 }
 
 div {
-  border: 1px solid black;
   display: block;
 }
 
@@ -76,14 +75,138 @@ body {
 
 .column.small{
   width: 240px;
+  flex-direction: column;
 }
 
 p {
   display: block;
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
+}
+
+.image-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 300px;
+    font-family: Georgia;
+    font-weight: bold;
+    font-size: 30px;
+    color: white;
+    text-align: center;
 }
 
 .lead-story .image-content {
   background-image:
   url('../pictures/Main-Story.png');
-  height: 300px;
+  width: 630px;
+  margin-top: 0;
+  text-align: left;
+}
+
+.lead-story .image-content span {
+  margin-left: 20px;
+  font-size: 40px;
+
+}
+
+.pop-culture.image-content {
+  background-image:
+  url('../pictures/Hipster-Cameraman.png');
+}
+
+.fall-cancelled.image-content {
+  background-image:
+  url('../pictures/Fall-Season.png');
+}
+
+.cat-ceo.image-content {
+  background-image:
+  url('../pictures/Cat-CEO.png');
+  text-align: center;
+}
+
+.text-content {
+  margin-bottom: 16px;
+}
+
+.stories {
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.story {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+}
+
+.stories .text-content{
+  height: 250px;
+}
+
+h2 {
+  margin-top: 0;
+  margin-bottom: 0;
+  display: block;
+  font-family: Georgia;
+  font-size: 30px;
+  font-weight: bold;
+  font-style: normal;
+}
+
+a {
+  padding-right: 20px;
+}
+
+.news-bite h3 {
+  margin-bottom: 41px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.news-bite .bite {
+  display: block;
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+  border-bottom: 1px solid black;
+  padding: 11px 20px;
+}
+
+footer {
+  display: flex;
+  background-color: MediumAquamarine;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 325px;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+}
+
+.footer .header-title {
+  display: inline-block;
+  padding-right: 25px;
+  border-right: 2px solid white;
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+}
+
+footer nav {
+  display: inline-block;
+  padding-left: 25px;
+}
+
+.copyright {
+  display: flex;
+  justify-content: center;
+  padding-top: 15px;
 }
